tests/snapshots/snapshots__budget_superstruct_src_structs_2000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 2000 (2004 tokens)

coercions.ts
     1→import { Struct, is, Coercer } from '../struct.js'
     2→import { isPlainObject } from '../utils.js'
     3→import { string, unknown } from './types.js'
    16→export function coerce …
    38→export function defaulted …
    79→export function trimmed …

refinements.ts
     1→import { Struct, Refiner } from '../struct.js'
     2→import { toFailures } from '../utils.js'
     8→export function empty …
    21→function getSize(value: string | any[] | Map<any, any> | Set<any>): number {
    22→  if (value instanceof Map || value instanceof Set) {
    23→    return value.size
    24→  } else {
    25→    return value.length
    26→  }
    27→}
    33→export function max …
    55→export function min …
    77→export function nonempty …
    93→export function pattern …
   109→export function size …
   146→export function refine …

types.ts
     1→import { Infer, Struct } from '../struct.js'
     2→import { define } from './utilities.js'
     3→import {
     4→  ObjectSchema,
     5→  ObjectType,
     6→  print,
     7→  run,
     8→  isObject,
     9→  isNonArrayObject,
    10→  AnyStruct,
    11→  InferStructTuple,
    12→  UnionToIntersection,
    13→} from '../utils.js'
    19→export function any …
    33→export function array<T extends Struct<any>>(Element?: T): any {
    34→  return new Struct({
    35→    type: 'array',
    36→    schema: Element,
    37→    *entries(value) {
    38→      if (Element && Array.isArray(value)) {
    39→        for (const [i, v] of value.entries()) {
    40→          yield [i, v, Element]
    41→        }
    42→      }
    43→    },
    44→    coercer(value) {
    45→      return Array.isArray(value) ? value.slice() : value
    46→    },
    47→    validator(value) {
    48→      return (
    49→        Array.isArray(value) ||
    50→        `Expected an array value, but received: ${print(value)}`
    51→      )
    52→    },
      →…
    60→export function bigint …
    70→export function boolean …
    83→export function date …
   105→export function enums<U extends string | number, T extends readonly U[]>(
   106→  values: T
   107→): any {
   108→  const schema: any = {}
   109→  const description = values.map((v) => print(v)).join()
   110→
   111→  for (const key of values) {
   112→    schema[key] = key
   113→  }
   114→
   115→  return new Struct({
   116→    type: 'enums',
   117→    schema,
   118→    validator(value) {
   119→      return (
   120→        values.includes(value as any) ||
   121→        `Expected one of \`${description}\`, but received: ${print(value)}`
   122→      )
   123→    },
   124→  })
   125→}
   131→export function func …
   144→export function instance …
   159→export function integer …
   172→export function intersection …
   204→export function literal<T>(constant: T): any {
   205→  const description = print(constant)
   206→  const t = typeof constant
   207→  return new Struct({
   208→    type: 'literal',
   209→    schema:
   210→      t === 'string' || t === 'number' || t === 'boolean' ? constant : null,
   211→    validator(value) {
   212→      return (
   213→        value === constant ||
   214→        `Expected the literal \`${description}\`, but received: ${print(value)}`
   215→      )
   216→    },
   217→  })
   218→}
   230→export function map<K, V>(Key?: Struct<K>, Value?: Struct<V>): any {
   231→  return new Struct({
   232→    type: 'map',
   233→    schema: null,
   234→    *entries(value) {
   235→      if (Key && Value && value instanceof Map) {
   236→        for (const [k, v] of value.entries()) {
   237→          yield [k as string, k, Key]
   238→          yield [k as string, v, Value]
   239→        }
   240→      }
   241→    },
   242→    coercer(value) {
   243→      return value instanceof Map ? new Map(value) : value
   244→    },
   245→    validator(value) {
   246→      return (
   247→        value instanceof Map ||
   248→        `Expected a \`Map\` object, but received: ${print(value)}`
   249→      )
      →…
   258→export function never …
   266→export function nullable …
   278→export function number …
   298→export function object<S extends ObjectSchema>(schema?: S): any {
   299→  const knowns = schema ? Object.keys(schema) : []
   300→  const Never = never()
   301→  return new Struct({
   302→    type: 'object',
   303→    schema: schema ? schema : null,
   304→    *entries(value) {
   305→      if (schema && isObject(value)) {
   306→        const unknowns = new Set(Object.keys(value))
   307→
   308→        for (const key of knowns) {
   309→          unknowns.delete(key)
   310→          yield [key, value[key], schema[key]]
   311→        }
   312→
   313→        for (const key of unknowns) {
   314→          yield [key, value[key], Never]
   315→        }
   316→      }
   317→    },
      →…
   351→export function optional …
   367→export function record …
   402→export function regexp …
   415→export function set<T>(Element?: Struct<T>): any {
   416→  return new Struct({
   417→    type: 'set',
   418→    schema: null,
   419→    *entries(value) {
   420→      if (Element && value instanceof Set) {
   421→        for (const v of value) {
   422→          yield [v as string, v, Element]
   423→        }
   424→      }
   425→    },
   426→    coercer(value) {
   427→      return value instanceof Set ? new Set(value) : value
   428→    },
   429→    validator(value) {
   430→      return (
   431→        value instanceof Set ||
   432→        `Expected a \`Set\` object, but received: ${print(value)}`
   433→      )
   434→    },
      →…
   442→export function string …
   456→export function tuple …
   492→export function type …
   522→export function union …
   574→export function unknown …

utilities.ts
     1→import { Context, Struct, Validator } from '../struct.js'
     2→import {
     3→  Assign,
     4→  ObjectSchema,
     5→  ObjectType,
     6→  PartialObjectSchema,
     7→} from '../utils.js'
     8→import { object, optional, type } from './types.js'
    60→export function assign(...Structs: Struct<any>[]): any {
    61→  const isType = Structs[0].type === 'type'
    62→  const schemas = Structs.map((s) => s.schema)
    63→  const schema = Object.assign({}, ...schemas)
    64→  return isType ? type(schema) : object(schema)
    65→}
    71→export function define …
    80→export function deprecated …
   106→export function dynamic …
   140→export function lazy …
   171→export function omit …
   197→export function partial …
   221→export function pick …
   247→export function struct …
