tests/snapshots/snapshots__budget_superstruct_src_structs_4000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 4000 (3967 tokens)

coercions.ts
     1→import { Struct, is, Coercer } from '../struct.js'
     2→import { isPlainObject } from '../utils.js'
     3→import { string, unknown } from './types.js'
     6→ * Augment a `Struct` to add an additional coercion step to its input.
     7→ *
     8→ * This allows you to transform input data before validating it, to increase the
     9→ * likelihood that it passes validation—for example for default values, parsing
    10→ * different formats, etc.
    11→ *
    12→ * Note: You must use `create(value, Struct)` on the value to have the coercion
    13→ * take effect! Using simply `assert()` or `is()` will not use coercion.
    16→export function coerce<T, S, C>(
    17→  struct: Struct<T, S>,
    18→  condition: Struct<C, any>,
    19→  coercer: Coercer<C>
    20→): Struct<T, S> {
    32→ * Augment a struct to replace `undefined` values with a default.
    33→ *
    34→ * Note: You must use `create(value, Struct)` on the value to have the coercion
    35→ * take effect! Using simply `assert()` or `is()` will not use coercion.
    38→export function defaulted<T, S>(
    39→  struct: Struct<T, S>,
    40→  fallback: any,
    41→  options: {
    42→    strict?: boolean
    43→  } = {}
    44→): Struct<T, S> {
    73→ * Augment a struct to trim string inputs.
    74→ *
    75→ * Note: You must use `create(value, Struct)` on the value to have the coercion
    76→ * take effect! Using simply `assert()` or `is()` will not use coercion.
    79→export function trimmed<T, S>(struct: Struct<T, S>): Struct<T, S> {

refinements.ts
     1→import { Struct, Refiner } from '../struct.js'
     2→import { toFailures } from '../utils.js'
     5→ * Ensure that a string, array, map, or set is empty.
     8→export function empty<
     9→  T extends string | any[] | Map<any, any> | Set<any>,
    10→  S extends any,
    11→>(struct: Struct<T, S>): Struct<T, S> {
    21→function getSize(value: string | any[] | Map<any, any> | Set<any>): number {
    22→  if (value instanceof Map || value instanceof Set) {
    23→    return value.size
    24→  } else {
    25→    return value.length
    26→  }
    27→}
    30→ * Ensure that a number or date is below a threshold.
    33→export function max<T extends number | Date, S extends any>(
    34→  struct: Struct<T, S>,
    35→  threshold: T,
    36→  options: {
    37→    exclusive?: boolean
    38→  } = {}
    39→): Struct<T, S> {
    52→ * Ensure that a number or date is above a threshold.
    55→export function min<T extends number | Date, S extends any>(
    56→  struct: Struct<T, S>,
    57→  threshold: T,
    58→  options: {
    59→    exclusive?: boolean
    60→  } = {}
    61→): Struct<T, S> {
    74→ * Ensure that a string, array, map or set is not empty.
    77→export function nonempty<
    78→  T extends string | any[] | Map<any, any> | Set<any>,
    79→  S extends any,
    80→>(struct: Struct<T, S>): Struct<T, S> {
    90→ * Ensure that a string matches a regular expression.
    93→export function pattern<T extends string, S extends any>(
    94→  struct: Struct<T, S>,
    95→  regexp: RegExp
    96→): Struct<T, S> {
   106→ * Ensure that a string, array, number, date, map, or set has a size (or length, or time) between `min` and `max`.
   109→export function size<
   110→  T extends string | number | Date | any[] | Map<any, any> | Set<any>,
   111→  S extends any,
   112→>(struct: Struct<T, S>, min: number, max: number = min): Struct<T, S> {
   139→ * Augment a `Struct` to add an additional refinement to the validation.
   140→ *
   141→ * The refiner function is guaranteed to receive a value of the struct's type,
   142→ * because the struct's existing validation will already have passed. This
   143→ * allows you to layer additional validation on top of existing structs.
   146→export function refine<T, S>(
   147→  struct: Struct<T, S>,
   148→  name: string,
   149→  refiner: Refiner<T>
   150→): Struct<T, S> {

types.ts
     1→import { Infer, Struct } from '../struct.js'
     2→import { define } from './utilities.js'
     3→import {
     4→  ObjectSchema,
     5→  ObjectType,
     6→  print,
     7→  run,
     8→  isObject,
     9→  isNonArrayObject,
    10→  AnyStruct,
    11→  InferStructTuple,
    12→  UnionToIntersection,
    13→} from '../utils.js'
    16→ * Ensure that any value passes validation.
    19→export function any(): Struct<any, null> {
    33→export function array<T extends Struct<any>>(Element?: T): any {
    34→  return new Struct({
    35→    type: 'array',
    36→    schema: Element,
    37→    *entries(value) {
    38→      if (Element && Array.isArray(value)) {
    39→        for (const [i, v] of value.entries()) {
    40→          yield [i, v, Element]
    41→        }
    42→      }
      →      …
    57→ * Ensure that a value is a bigint.
    60→export function bigint(): Struct<bigint, null> {
    67→ * Ensure that a value is a boolean.
    70→export function boolean(): Struct<boolean, null> {
    77→ * Ensure that a value is a valid `Date`.
    78→ *
    79→ * Note: this also ensures that the value is *not* an invalid `Date` object,
    80→ * which can occur when parsing a date fails but still returns a `Date`.
    83→export function date(): Struct<Date, null> {
   105→export function enums<U extends string | number, T extends readonly U[]>(
   106→  values: T
   107→): any {
   108→  const schema: any = {}
   109→  const description = values.map((v) => print(v)).join()
   110→
   111→  for (const key of values) {
   112→    schema[key] = key
   113→  }
   114→
   115→  return new Struct({
   116→    type: 'enums',
      →    …
   128→ * Ensure that a value is a function.
   131→export function func(): Struct<Function, null> {
   141→ * Ensure that a value is an instance of a specific class.
   144→export function instance<T extends { new (...args: any): any }>(
   145→  Class: T
   146→): Struct<InstanceType<T>, null> {
   156→ * Ensure that a value is an integer.
   159→export function integer(): Struct<number, null> {
   169→ * Ensure that a value matches all of a set of types.
   172→export function intersection<A extends AnyStruct, B extends AnyStruct[]>(
   173→  Structs: [A, ...B]
   174→): Struct<Infer<A> & UnionToIntersection<InferStructTuple<B>[number]>, null> {
   204→export function literal<T>(constant: T): any {
   205→  const description = print(constant)
   206→  const t = typeof constant
   207→  return new Struct({
   208→    type: 'literal',
   209→    schema:
   210→      t === 'string' || t === 'number' || t === 'boolean' ? constant : null,
   211→    validator(value) {
   212→      return (
   213→        value === constant ||
      →        …
   230→export function map<K, V>(Key?: Struct<K>, Value?: Struct<V>): any {
   231→  return new Struct({
   232→    type: 'map',
   233→    schema: null,
   234→    *entries(value) {
   235→      if (Key && Value && value instanceof Map) {
   236→        for (const [k, v] of value.entries()) {
   237→          yield [k as string, k, Key]
   238→          yield [k as string, v, Value]
   239→        }
      →        …
   255→ * Ensure that no value ever passes validation.
   258→export function never(): Struct<never, null> {
   263→ * Augment an existing struct to allow `null` values.
   266→export function nullable<T, S>(struct: Struct<T, S>): Struct<T | null, S> {
   275→ * Ensure that a value is a number.
   278→export function number(): Struct<number, null> {
   298→export function object<S extends ObjectSchema>(schema?: S): any {
   299→  const knowns = schema ? Object.keys(schema) : []
   300→  const Never = never()
   301→  return new Struct({
   302→    type: 'object',
   303→    schema: schema ? schema : null,
   304→    *entries(value) {
   305→      if (schema && isObject(value)) {
   306→        const unknowns = new Set(Object.keys(value))
   307→
      →…
   348→ * Augment a struct to allow `undefined` values.
   351→export function optional<T, S>(struct: Struct<T, S>): Struct<T | undefined, S> {
   361→ * Ensure that a value is an object with keys and values of specific types, but
   362→ * without ensuring any specific shape of properties.
   363→ *
   364→ * Like TypeScript's `Record` utility.
   367→export function record<K extends string, V>(
   368→  Key: Struct<K>,
   369→  Value: Struct<V>
   370→): Struct<Record<K, V>, null> {
   396→ * Ensure that a value is a `RegExp`.
   397→ *
   398→ * Note: this does not test the value against the regular expression! For that
   399→ * you need to use the `pattern()` refinement.
   402→export function regexp(): Struct<RegExp, null> {
   415→export function set<T>(Element?: Struct<T>): any {
   416→  return new Struct({
   417→    type: 'set',
   418→    schema: null,
   419→    *entries(value) {
   420→      if (Element && value instanceof Set) {
   421→        for (const v of value) {
   422→          yield [v as string, v, Element]
   423→        }
   424→      }
      →      …
   439→ * Ensure that a value is a string.
   442→export function string(): Struct<string, null> {
   452→ * Ensure that a value is a tuple of a specific length, and that each of its
   453→ * elements is of a specific type.
   456→export function tuple<A extends AnyStruct, B extends AnyStruct[]>(
   457→  Structs: [A, ...B]
   458→): Struct<[Infer<A>, ...InferStructTuple<B>], null> {
   486→ * Ensure that a value has a set of known properties of specific types.
   487→ *
   488→ * Note: Unrecognized properties are allowed and untouched. This is similar to
   489→ * how TypeScript's structural typing works.
   492→export function type<S extends ObjectSchema>(
   493→  schema: S
   494→): Struct<ObjectType<S>, S> {
   519→ * Ensure that a value matches one of a set of types.
   522→export function union<A extends AnyStruct, B extends AnyStruct[]>(
   523→  Structs: [A, ...B]
   524→): Struct<Infer<A> | InferStructTuple<B>[number], null> {
   571→ * Ensure that any value passes validation, without widening its type to `any`.
   574→export function unknown(): Struct<unknown, null> {

utilities.ts
     1→import { Context, Struct, Validator } from '../struct.js'
     2→import {
     3→  Assign,
     4→  ObjectSchema,
     5→  ObjectType,
     6→  PartialObjectSchema,
     7→} from '../utils.js'
     8→import { object, optional, type } from './types.js'
    60→export function assign(...Structs: Struct<any>[]): any {
    61→  const isType = Structs[0].type === 'type'
    62→  const schemas = Structs.map((s) => s.schema)
    63→  const schema = Object.assign({}, ...schemas)
    64→  return isType ? type(schema) : object(schema)
    65→}
    68→ * Define a new struct type with a custom validation function.
    71→export function define<T>(name: string, validator: Validator): Struct<T, null> {
    76→ * Create a new struct based on an existing struct, but the value is allowed to
    77→ * be `undefined`. `log` will be called if the value is not `undefined`.
    80→export function deprecated<T>(
    81→  struct: Struct<T>,
    82→  log: (value: unknown, ctx: Context) => void
    83→): Struct<T> {
    99→ * Create a struct with dynamic validation logic.
   100→ *
   101→ * The callback will receive the value currently being validated, and must
   102→ * return a struct object to validate it with. This can be useful to model
   103→ * validation logic that changes based on its input.
   106→export function dynamic<T>(
   107→  fn: (value: unknown, ctx: Context) => Struct<T, any>
   108→): Struct<T, null> {
   132→ * Create a struct with lazily evaluated validation logic.
   133→ *
   134→ * The first time validation is run with the struct, the callback will be called
   135→ * and must return a struct object to use. This is useful for cases where you
   136→ * want to have self-referential structs for nested data structures to avoid a
   137→ * circular definition problem.
   140→export function lazy<T>(fn: () => Struct<T, any>): Struct<T, null> {
   165→ * Create a new struct based on an existing object struct, but excluding
   166→ * specific properties.
   167→ *
   168→ * Like TypeScript's `Omit` utility.
   171→export function omit<S extends ObjectSchema, K extends keyof S>(
   172→  struct: Struct<ObjectType<S>, S>,
   173→  keys: K[]
   174→): Struct<ObjectType<Omit<S, K>>, Omit<S, K>> {
   191→ * Create a new struct based on an existing object struct, but with all of its
   192→ * properties allowed to be `undefined`.
   193→ *
   194→ * Like TypeScript's `Partial` utility.
   197→export function partial<S extends ObjectSchema>(
   198→  struct: Struct<ObjectType<S>, S> | S
   199→): Struct<ObjectType<PartialObjectSchema<S>>, PartialObjectSchema<S>> {
   215→ * Create a new struct based on an existing object struct, but only including
   216→ * specific properties.
   217→ *
   218→ * Like TypeScript's `Pick` utility.
   221→export function pick<S extends ObjectSchema, K extends keyof S>(
   222→  struct: Struct<ObjectType<S>, S>,
   223→  keys: K[]
   224→): Struct<ObjectType<Pick<S, K>>, Pick<S, K>> {
   242→ * Define a new struct type with a custom validation function.
   243→ *
   244→ * @deprecated This function has been renamed to `define`.
   247→export function struct<T>(name: string, validator: Validator): Struct<T, null> {
