tests/snapshots/snapshots__budget_superstruct_src_structs_500.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 500 (479 words)

coercions.ts
     1→import { Struct, is, Coercer } from '../struct.js'
     2→import { isPlainObject } from '../utils.js'
     3→import { string, unknown } from './types.js'
    16→export function coerce …
    38→export function defaulted …
    79→export function trimmed …
refinements.ts
     1→import { Struct, Refiner } from '../struct.js'
     2→import { toFailures } from '../utils.js'
     8→export function empty …
    21→function getSize(value: string | any[] | Map<any, any> | Set<any>): number {
    22→  if (value instanceof Map || value instanceof Set) {
    23→    return value.size
    24→  } else {
    25→    return value.length
    26→  }
    27→}
    33→export function max …
    55→export function min …
    77→export function nonempty …
    93→export function pattern …
   109→export function size …
   146→export function refine …
types.ts
     1→import { Infer, Struct } from '../struct.js'
     2→import { define } from './utilities.js'
     3→import {
     4→  ObjectSchema,
     5→  ObjectType,
     6→  print,
     7→  run,
     8→  isObject,
     9→  isNonArrayObject,
    10→  AnyStruct,
    11→  InferStructTuple,
    12→  UnionToIntersection,
    13→} from '../utils.js'
    19→export function any …
    33→export function array<T extends Struct<any>>(Element?: T): any {
    34→  return new Struct({
    35→    type: 'array',
    36→    schema: Element,
    37→    *entries(value) {
      →…
    60→export function bigint …
    70→export function boolean …
    83→export function date …
   105→export function enums<U extends string | number, T extends readonly U[]>(
   106→  values: T
   107→): any {
   108→  const schema: any = {}
   109→  const description = values.map((v) => print(v)).join()
   110→
   111→  for (const key of values) {
      →…
   131→export function func …
   144→export function instance …
   159→export function integer …
   172→export function intersection …
   204→export function literal<T>(constant: T): any {
   205→  const description = print(constant)
   206→  const t = typeof constant
   207→  return new Struct({
   208→    type: 'literal',
      →…
   230→export function map<K, V>(Key?: Struct<K>, Value?: Struct<V>): any {
   231→  return new Struct({
   232→    type: 'map',
   233→    schema: null,
   234→    *entries(value) {
      →…
   258→export function never …
   266→export function nullable …
   278→export function number …
   298→export function object<S extends ObjectSchema>(schema?: S): any {
   299→  const knowns = schema ? Object.keys(schema) : []
   300→  const Never = never()
   301→  return new Struct({
   302→    type: 'object',
      →…
   351→export function optional …
   367→export function record …
   402→export function regexp …
   415→export function set<T>(Element?: Struct<T>): any {
   416→  return new Struct({
   417→    type: 'set',
   418→    schema: null,
   419→    *entries(value) {
      →…
   442→export function string …
   456→export function tuple …
   492→export function type …
   522→export function union …
   574→export function unknown …
utilities.ts
     1→import { Context, Struct, Validator } from '../struct.js'
     2→import {
     3→  Assign,
     4→  ObjectSchema,
     5→  ObjectType,
     6→  PartialObjectSchema,
     7→} from '../utils.js'
     8→import { object, optional, type } from './types.js'
    60→export function assign(...Structs: Struct<any>[]): any {
    61→  const isType = Structs[0].type === 'type'
    62→  const schemas = Structs.map((s) => s.schema)
    63→  const schema = Object.assign({}, ...schemas)
    64→  return isType ? type(schema) : object(schema)
      →…
    71→export function define …
    80→export function deprecated …
   106→export function dynamic …
   140→export function lazy …
   171→export function omit …
   197→export function partial …
   221→export function pick …
   247→export function struct …
