tests/snapshots/snapshots__budget_superstruct_structs_subdir1.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 5 → level 0 (4 words)

coercions.ts
refinements.ts
types.ts
utilities.ts
