tests/snapshots/snapshots__budget_superstruct_structs_subdir2.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 150 → level 2 (138 words)

coercions.ts
    16→export function coerce
    38→export function defaulted
    79→export function trimmed
refinements.ts
     8→export function empty
    21→function getSize
    33→export function max
    55→export function min
    77→export function nonempty
    93→export function pattern
   109→export function size
   146→export function refine
types.ts
    19→export function any
    33→export function array
    60→export function bigint
    70→export function boolean
    83→export function date
   105→export function enums
   131→export function func
   144→export function instance
   159→export function integer
   172→export function intersection
   204→export function literal
   230→export function map
   258→export function never
   266→export function nullable
   278→export function number
   298→export function object
   351→export function optional
   367→export function record
   402→export function regexp
   415→export function set
   442→export function string
   456→export function tuple
   492→export function type
   522→export function union
   574→export function unknown
utilities.ts
    60→export function assign
    71→export function define
    80→export function deprecated
   106→export function dynamic
   140→export function lazy
   171→export function omit
   197→export function partial
   221→export function pick
   247→export function struct
