tests/snapshots/snapshots__budget_thiserror_1000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 1000 (998 tokens)

Cargo.toml
     1→[package]
    14→[features]
    30→[dependencies]
    33→[dev-dependencies]
    39→[workspace]

README.md
     1→derive(Error)
    21→## Example
    44→## Details
   211→## Comparison to anyhow
   223→#### License

build/probe.rs
    11→struct MyError(Thing);
    12→struct Thing;
    15→    fn fmt …
    21→    fn fmt …
    27→    fn provide …

impl/Cargo.toml
     1→[package]
    11→[lib]
    14→[dependencies]

impl/src/ast.rs
    45→pub enum ContainerKind {
    46→    Struct,
    47→    TupleStruct,
      →    …
    55→    pub fn from_syn …
   175→    fn fmt …

impl/src/attr.rs
    11→pub struct Attrs<'a> {
    21→pub struct Display<'a> {
    33→pub struct Source<'a> {
    39→pub struct From<'a> {
    45→pub struct Transparent<'a> {
    51→pub struct Fmt<'a> {
    57→pub enum Trait {

impl/src/expand.rs
    12→pub fn derive(input: &DeriveInput) -> TokenStream {

impl/src/fmt.rs
    16→    pub fn expand_shorthand …
   172→fn explicit_named_args …

impl/src/generics.rs
     8→pub struct ParamsInScope<'a> {
    48→pub struct InferredBounds {

impl/src/lib.rs
    40→pub fn derive_error(input: TokenStream) -> TokenStream {
    46→struct private;
    49→    fn to_tokens …

impl/src/unraw.rs
    12→pub struct IdentUnraw(Ident);
    82→pub enum MemberUnraw {
    83→    Named(IdentUnraw),
    84→    Unnamed(Index),
    85→}

rust-toolchain.toml
     1→[toolchain]

src/aserror.rs
     5→pub trait AsDynError<'a>: Sealed {
     6→    fn as_dyn_error(&self) -> &(dyn Error + 'a);
    11→    fn as_dyn_error …
    18→    fn as_dyn_error …
    25→    fn as_dyn_error …
    32→    fn as_dyn_error …
    39→    fn as_dyn_error …
    45→pub trait Sealed {}

src/display.rs
     3→use std::path::{self, Path, PathBuf};
     6→pub trait AsDisplay<'a>: Sealed {
    11→    fn as_display …
    18→    type Target = &'a T;
    20→    fn as_display …
    27→    type Target = path::Display<'a>;
    30→    fn as_display(&'a self) -> Self::Target {
    37→    type Target = path::Display<'a>;
    40→    fn as_display(&'a self) -> Self::Target {
    46→pub trait Sealed {}
    59→mod placeholder {
    60→    use super::{AsDisplay, Sealed};
    63→    #[allow(dead_code)]
    64→    pub struct Placeholder;
    67→        type Target = Self;
    70→        fn as_display(&'a self) -> Self::Target {
    76→        fn fmt …

src/lib.rs
   284→mod provide;
   287→pub use thiserror_impl::*;

src/private.rs
     2→pub use crate::aserror::AsDynError;
     4→pub use crate::display::AsDisplay;
     7→pub use crate::provide::ThiserrorProvide;
     9→pub use crate::var::Var;

src/provide.rs
     4→pub trait ThiserrorProvide: Sealed {
     5→    fn thiserror_provide<'a>(&'a self, request: &mut Request<'a>);
    12→    #[inline]
    13→    fn thiserror_provide<'a>(&'a self, request: &mut Request<'a>) {
    19→pub trait Sealed {}

src/var.rs
     3→pub struct Var<'a, T: ?Sized>(pub &'a T);
     6→    fn fmt(&self, formatter: &mut fmt::Formatter) -> fmt::Result {
